# ArbSh

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  System.md  Tasks_2025-07-03T08-23-14.md  Tasks_2025-07-03T09-09-52.md  create-release.ps1  imgui.ini  prompt.txt  test_features.ps1
cmake/: gcc_toolchain.cmake
docs/: ARABIC_SUPPORT_GUIDE.md  BAA_INTEGRATION.md  BIDI_I_RULES_DESIGN.md  BIDI_L_RULES_DESIGN.md  BIDI_N_RULES_DESIGN.md  BIDI_P_RULES_DESIGN.md  BIDI_W_RULES_DESIGN.md  BIDI_X_RULES_DESIGN.md  CHANGELOG.md  CMAKE_CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT_TASKS.md  DOCUMENTATION_INDEX.md  PROJECT_ORGANIZATION.md  PROJECT_STATUS.md  ROADMAP.md  TERMINAL_EMULATION_ROADMAP.md  TESTING_FRAMEWORK.md  USAGE_EXAMPLES.md
include/: bidi.h  config.h  shell.h
include/platform/: console.h  filesystem.h  process.h
installer/: Install-ArbSh.ps1  Uninstall-ArbSh.ps1
old_c_code/cmake/: gcc_toolchain.cmake
old_c_code/docs/: ARABIC_SUPPORT_GUIDE.md  IMPLEMENTATION_STATUS.md  ROADMAP.md  ROADMAP_CONSOLE_GUI_IMPROVEMENT.md
old_c_code/include/: imgui_shell.h
old_c_code/src/core/: builtin.c  errors1.c  history.c  lists1.c
old_c_code/src/i18n/: arabic_input.c
old_c_code/src/i18n/bidi/: bidi.c
old_c_code/src/platform/: process_manager.h
old_c_code/src/platform/posix/: console.c  process.c
old_c_code/src/platform/windows/: filesystem.c  process.c
old_c_code/src/utils/: lists1.c  string1.c  utf8.c  utf8_output.c
old_c_code/tests/arabic/bidi_algorithm/: test_bidi.c
old_c_code/tests/arabic/text_display/: test_utf8.c
old_c_code/tests/arabic/text_input/: test_keyboard.c
old_c_code/tests/fixtures/text_samples/: arabic_samples.h
old_c_code/tests/gui/: test_imgui.cpp
ref/: webpage-2025-07-03T06-59-29-751Z.md
src/: arabic_input.c  builtin.c  shell_entry.c  utf8.c
src/core/: builtin.c  builtin1.c  config.c  environ.c  errors.c  errors1.c  exits.c  getLine.c  getenv.c  getinfo.c  history.c  parser.c  shell_entry.c  shell_loop.c  vars.c
src/gui/: imgui_main.cpp  imgui_shell.cpp  terminal_tab.c  terminal_tab.h
src/i18n/bidi/: bidi.c
src/i18n/locale/: locale.c
src/platform/: process_manager.c  process_manager.h
src/platform/posix/: filesystem.c  process.c
src/platform/windows/: console.c  filesystem.c  process.c
src/utils/: imgui_compat.c  string.c  utf8.c  utf8_output.c
src/utils/highlight/: highlight.c
src_csharp/: ArbSh.sln
src_csharp/ArbSh.Console/: ArabicNameAttribute.cs  ArbSh.Console.csproj  CmdletBase.cs  CommandDiscovery.cs  ConsoleExecutionSink.cs  Executor.cs  ParameterAttribute.cs  ParameterBindingException.cs  ParsedCommand.cs  Parser.cs  PipelineObject.cs  Program.cs
src_csharp/ArbSh.Console/Commands/: GetCommandCmdlet.cs  GetHelpCmdlet.cs  TestArrayBindingCmdlet.cs  TestTypeLiteralCmdlet.cs  WriteOutputCmdlet.cs
src_csharp/ArbSh.Console/I18n/: ArabicConsoleInput.cs  ArabicShaper.cs  BiDiTextProcessor.cs  BidiAlgorithm.cs  BidiCharacterType.cs  ConsoleEnvironment.cs  ConsoleRTLDisplay.cs  RTLConsoleInput.cs  RTLInputHandler.cs  WindowsConsoleApi.cs
src_csharp/ArbSh.Console/Models/: CommandInfo.cs
src_csharp/ArbSh.Console/Parsing/: RegexTokenizer.cs  Token.cs
src_csharp/ArbSh.Core/: ArabicNameAttribute.cs  ArbSh.Core.csproj  CmdletBase.cs  CommandDiscovery.cs  Executor.cs  ParameterAttribute.cs  ParameterBindingException.cs  ParsedCommand.cs  Parser.cs  PipelineObject.cs  ShellEngine.cs  ShellSessionState.cs
src_csharp/ArbSh.Core/Commands/: ChangeDirectoryCmdlet.cs  GetCommandCmdlet.cs  GetCurrentDirectoryCmdlet.cs  GetHelpCmdlet.cs  ListDirectoryCmdlet.cs  TestArrayBindingCmdlet.cs  TestTypeLiteralCmdlet.cs  WriteOutputCmdlet.cs
src_csharp/ArbSh.Core/Hosting/: CoreConsole.cs  IExecutionSink.cs  ShellSessionContext.cs
src_csharp/ArbSh.Core/I18n/: ArabicShaper.cs  BiDiTextProcessor.cs  BidiAlgorithm.cs  BidiCharacterType.cs
src_csharp/ArbSh.Core/Models/: CommandInfo.cs
src_csharp/ArbSh.Core/Parsing/: RegexTokenizer.cs  Token.cs
src_csharp/ArbSh.Terminal/: App.axaml  App.axaml.cs  ArbSh.Terminal.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
src_csharp/ArbSh.Terminal/Input/: OutputSelectionBuffer.cs  SelectionRange.cs  TerminalInputBuffer.cs
src_csharp/ArbSh.Terminal/Models/: TerminalLine.cs
src_csharp/ArbSh.Terminal/Rendering/: AnsiColorSpec.cs  AnsiPalette.cs  AnsiSgrParser.cs  AnsiStyleModel.cs  ITextMeasurer.cs  PromptLayoutSnapshot.cs  TerminalDrawInstruction.cs  TerminalFrameLayout.cs  TerminalLayoutEngine.cs  TerminalRenderConfig.cs  TerminalSurface.cs  TerminalTextPipeline.cs  TerminalTheme.cs  VisualTextRun.cs
src_csharp/ArbSh.Terminal/ViewModels/: MainWindowViewModel.cs
src_csharp/ArbSh.Test/: AnsiPaletteTests.cs  AnsiSgrParserTests.cs  ArabicCommandSurfaceTests.cs  ArabicShapingTests.cs  ArbSh.Test.csproj  BidiAlgorithmTests.cs  BidiTestConformanceTests.cs  BidiTestFramework.cs  FileManagementCmdletTests.cs  LogicalVisualSeparationTests.cs  OutputSelectionBufferTests.cs  TerminalInputBufferTests.cs  TerminalLayoutEngineTests.cs  TerminalTextPipelineTests.cs  UnitTest1.cs
templates/: config.ini.template
tests/: test_helpers.h
tests/arabic/text_display/: test_utf8.c
tests/arabic/text_input/: test_stubs.c
